--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
   <div class="container">
     <div class="text"></div>
     <div class="row">
-      <button id="clear">C</button>
-      <button id="delete">D</button>
-      <button></button>
-      <button>/</button>
+      <button class="special" id="clear">C</button>
+      <button class="special" id="delete">D</button>
+      <button class="special"></button>
+      <button class="special">/</button>
     </div>
     <div class="row">
       <button>7</button>
       <button>8</button>
       <button>9</button>
-      <button>*</button>
+      <button class="special">*</button>
     </div>
     <div class="row">
       <button>4</button>
       <button>5</button>
       <button>6</button>
-      <button>-</button>
+      <button class="special">-</button>
     </div>
     <div class="row">
       <button>1</button>
       <button>2</button>
       <button>3</button>
-      <button>+</button>
+      <button class="special">+</button>
     </div>
     <div class="row">
       <button id="negative">+/-</button>
       <button>0</button>
       <button>.</button>
-      <button id="equals">=</button>
+      <button class="special" id="equals">=</button>
     </div>
   </div>
   <script src="script.js"></script>
